; ModuleID = '/home/carl/AnghaBench/kphp-kdb/binlog/extr_kdb-binlog-common.c_set_log_data.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/binlog/extr_kdb-binlog-common.c_set_log_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@binlog_fd = common dso_local global i32 0, align 4
@binlog_size = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"bad binlog headers (fd=%d)\0A\00", align 1
@binlog_check_mode = common dso_local global i64 0, align 8
@LogCopyBuffer = common dso_local global i64 0, align 8
@ULOG_BUFFER_SIZE = common dso_local global i64 0, align 8
@log_pos = common dso_local global i32 0, align 4
@W = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_log_data(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* %3, align 4
  store i32 %5, i32* @binlog_fd, align 4
  %6 = load i64, i64* %4, align 8
  store i64 %6, i64* @binlog_size, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @load_binlog_headers(i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* @stderr, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = call i32 @exit(i32 1) #3
  unreachable

15:                                               ; preds = %2
  %16 = load i64, i64* @binlog_check_mode, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %15
  %19 = load i64, i64* @LogCopyBuffer, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %25, label %21

21:                                               ; preds = %18
  %22 = load i64, i64* @ULOG_BUFFER_SIZE, align 8
  %23 = add nsw i64 %22, 16
  %24 = call i64 @malloc(i64 %23)
  store i64 %24, i64* @LogCopyBuffer, align 8
  br label %25

25:                                               ; preds = %21, %18, %15
  %26 = load i32, i32* @log_pos, align 4
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @W, i32 0, i32 0), align 4
  ret void
}

declare dso_local i64 @load_binlog_headers(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
